force-app/main/default/objects/Job_Queue_Group__c/Job_Queue_Group__c.object-meta.xml
<CustomObject>
    <description>The group of job queues. Used by job queue framework.</description>
    <label>Job Queue Group</label>
    <nameField>
        <displayFormat>JQG-{00000}</displayFormat>
        <label>Job Queue Group #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Queue Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>