force-app/main/default/objects/Job_Queue_Group__c/fields/Cancelled_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Jobs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total cancelled jobs.</description>
    <inlineHelpText>Total cancelled jobs.</inlineHelpText>
    <label>Cancelled Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>