force-app/main/default/objects/Job_Queue_Group__c/fields/Completed_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Completed_Jobs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total completed jobs.</description>
    <inlineHelpText>Total completed jobs.</inlineHelpText>
    <label>Completed Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>