force-app/main/default/objects/Job_Queue_Group__c/fields/Error_Records__c.field-meta.xml
<CustomField>
    <fullName>Error_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total error records.</description>
    <inlineHelpText>Total error records.</inlineHelpText>
    <label>Error Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>