force-app/main/default/objects/Job_Queue_Group__c/fields/Failed_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Failed_Jobs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total failed jobs.</description>
    <inlineHelpText>Total failed jobs.</inlineHelpText>
    <label>Failed Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>