force-app/main/default/objects/Job_Queue_Group__c/fields/Job_Operation_Context__c.field-meta.xml
<CustomField>
    <fullName>Job_Operation_Context__c</fullName>
    <description>Track the job context for wizard filtering purposes.</description>
    <inlineHelpText>Track the job context for wizard filtering purposes.</inlineHelpText>
    <label>Job Operation Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>