force-app/main/default/objects/Job_Queue_Group__c/fields/Sample_Record_Code__c.field-meta.xml
<CustomField>
    <fullName>Sample_Record_Code__c</fullName>
    <label>Sample Record Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>