force-app/main/default/objects/Job_Queue_Group__c/fields/Success_Records__c.field-meta.xml
<CustomField>
    <fullName>Success_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total success records.</description>
    <inlineHelpText>Total success records.</inlineHelpText>
    <label>Success Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>