force-app/main/default/objects/Job_Queue_Group__c/fields/Total_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total jobs.</description>
    <inlineHelpText>Total jobs.</inlineHelpText>
    <label>Total Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>