force-app/main/default/objects/Job_Queue_Group__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total records.</description>
    <inlineHelpText>Total records.</inlineHelpText>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>