force-app/main/default/objects/Job_Queue_Group__c/fields/Warning_Records__c.field-meta.xml
<CustomField>
    <fullName>Warning_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total warning records.</description>
    <inlineHelpText>Total warning records.</inlineHelpText>
    <label>Warning Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>