force-app/main/default/objects/Job_Queue_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Operation_Context__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Datetime__c</columns>
    <columns>End_Datetime__c</columns>
    <columns>Total_Jobs__c</columns>
    <columns>Completed_Jobs__c</columns>
    <columns>Failed_Jobs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>